# uni-practice

./: README.md  cmds-k8s.md  cmds.md
cpp-hello-app/: Dockerfile
cpp-hostname-app/: CMakeLists.txt  Dockerfile  main.cpp
cpp-hostname-k8s/: CMakeLists.txt  deployment.yaml  main.cpp  service.yaml
cpp-simple-api/: CMakeLists.txt  Dockerfile  main.cpp
hostname-app/: CMakeLists.txt  Dockerfile  handler.cpp  handler.h  hpa.yaml
hostname-app/.github/workflows/: ci-cd.yml
hostname-app/tests/: handler_test.cpp
